Complete ThreadReconciler adapter, dispatcher, recovery lifecycle, PostgreSQL transactions integration and tests. Full coverage for claim/renew/apply/fence/sibling tools. 92%+ JaCoCo on core classes. Spotless applied, tests pass on PG17.